# ai-question-bank

./: .gitignore  DEPLOYMENT.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: build-apk.yml
android-app/: README.md  pubspec.yaml
android-app/android/: build.gradle.kts  gradle.properties  init-mirrors.gradle  local.properties  settings.gradle.kts
android-app/lib/: main.dart  rich_content.dart
android-app/test/: app_settings_controller_test.dart  chart_data_test.dart  critical_regression_test.dart  knowledge_diagnosis_test.dart  listening_audio_service_test.dart  media_card_logic_test.dart  ocr_models_test.dart  official_ai_client_test.dart  rpg_overlay_test.dart  secure_api_config_storage_test.dart  settings_page_test.dart  structured_chart_widget_test.dart  widget_test.dart
backend/: .env.example  backend.spec  main.py  requirements.txt  run.bat  test_data.txt
docs/: android-app-design-brief.md  android-v1.0.6-acceptance.md  android-v2.0.0-candidate.md  v3.0.0-commercial-release-gates.md  v3.0.0-master-plan.md  v3.0.0-payment-readiness.md  v3.0.0-phase1-report.md  v3.0.0-phase1-test001.md  v3.0.0-phase2-report.md  v3.0.0-phase2-test001.md  v3.0.0-phase2-test002.md  v3.0.0-phase3-report.md  v3.0.0-pricing-analysis.md  v3.0.0-rc002-report.md  v3.0.0-security-review.md
scripts/: build-backend.ps1  package-desktop.ps1  tauri-env-gnu.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
web/: UI设计优化方案-趣味化升级.md  _redirects  index.html  项目概况-给网页设计师.md
(+72 files in other folders)
