[package]
name = "ai-question-bank"
version = "1.0.0"
description = "AI题库桌面版"
authors = ["AI题库"]
edition = "2021"

[lib]
name = "ai_question_bank_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
